<resources>
    <string name="app_name">Proyek 1 JMP</string>
    <string name="yo_coedotz">Coedotz - JMP VSGA 2022 Telkom University</string>
    <string name="aplikasi_input_nama">Aplikasi Input Nama</string>
    <string name="aplikasi_kalkulator">Aplikasi Kalkulator</string>
    <string name="aplikasi_listview">Aplikasi ListView</string>
    <string name="teks_kalkulator">Masukan Dua Angka</string>
    <string name="angka_pertama">Angka Pertama</string>
    <string name="angka_kedua">Angka Kedua</string>
    <string name="input_nama">Input Nama</string>
    <string name="proses">Proses</string>
    <string name="nama">Nama</string>
    <string name="plus">+</string>
    <string name="kurang">-</string>
    <string name="bagi">/</string>
    <string name="kali">X</string>
    <string name="bersihkan">bersihkan</string>
    
    <string-array name="daftar_negara">
        <item>Indonesia</item>
        <item>Malaysia</item>
        <item>Singapore</item>
        <item>Italia</item>
        <item>Inggris</item>
        <item>Belanda</item>
        <item>Argentina</item>
        <item>Cile</item>
        <item>Mesir</item>
        <item>Uganda</item>
    </string-array>
</resources>